Fixed logo right spacing bug

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,20 +1,19 @@
 #logo {
 	height: 200;
-	width: 170;
-	margin-right: -4;
-	padding-left: 20;
-	padding-top: 20;
-	padding-right: 10;
-	padding-bottom: 20;
+	width: 17%;
+	padding-left: 2%;
+	padding-top: 2%;
+	padding-right: 1%;
+	padding-bottom: 2%;
 }
 
 #banner {
 	height: 200;
-	width: 770;
-	padding-left: 10;
-	padding-top: 20;
-	padding-right: 20;
-	padding-bottom: 20;
+	width: 77%;
+	padding-left: 1%;
+	padding-top: 2%;
+	padding-right: 2%;
+	padding-bottom: 2%;
 }
 
 body {
